--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
     "autoprefixer": "^9.7.5",
+    "axios": "^0.21.0",
     "postcss-cli": "^7.1.0",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
